# tetra-receiver

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: clang-format.yml  tetra-receiver-x86_64.yml
include/: config.h  prometheus.h  prometheus_gauge_populator.h
nixos-modules/: tetra-receiver.nix
pkgs/: gr-clenabled-use-correct-opencl.patch  gr-clenabled.nix  tetra-receiver.nix
src/: config.cpp  main.cpp  prometheus.cpp  prometheus_gauge_populator.cpp  tetra-receiver.cpp
test/: CMakeLists.txt  config_test.cpp  mockup_test.cpp  prometheus_test.cpp
